<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">smallCat</string>
    <string name="title_activity_main">smallcat</string>
    <string name="lbl_premium_offline">Offline Listening</string>
    <string name="lbl_premium_offline_description">Listen to articles without an internet connection or using data</string>
    <string name="lbl_premium_unlimited">Unlimited Playlist Size</string>
    <string name="lbl_premium_unlimited_description">Add and download as many articles to your playlist as you want</string>
    <string name="lbl_premium_reorder">Playlist Reordering</string>
    <string name="lbl_premium_reorder_description">Customize the order articles appear in your playlist</string>
    <string name="lbl_premium_auto">Auto-Playlist Magic</string>
    <string name="lbl_premium_auto_description">Automatically generate playlist based on categories you follow</string>
    <string name="lbl_premium_sleep">Sleep Timer</string>
    <string name="lbl_premium_sleep_description">Set a sleep timer to turn off playback after a desired time interval</string>
    <string name="lbl_premium_summary">News Flash</string>
    <string name="lbl_premium_summary_description">Have the latest breaking news summarized and read to you throughout the day</string>
    <string name="lbl_premium_jingle">Custom Jingles</string>
    <string name="lbl_premium_jingle_description">Customize the sound before each article starts playing</string>
    <string name="lbl_premium_features">PREMIUM FEATURES</string>
    <string name="lbl_premium_more">AND MORE COMING SOON…</string>
    <string name="lbl_premium_content">PREMIUM CONTENT</string>
    <string name="lbl_continue_getting_premium">Extend Free Premium Access</string>
    <string name="lbl_premium_title">Umano Premium</string>
    <string name="lbl_settings_fragment">Settings</string>
    <string name="lbl_premium_description">The best way to get the most out of your hands free experience.</string>
    <string name="btn_login_only">Login</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_club_home">ClubHomeActivity</string>
    <string name="title_club_section1">动态</string>
    <string name="title_club_section2">活动</string>
    <string name="title_club_section3">文件</string>
    <string name="title_club_section4">投票</string>
    <string name="title_club_section5">成员</string>
    <string name="title_activity_club_detail">ClubDetailActivity</string>
    <string name="text_comment">说些什么哈~</string>
    <string name="btn_post">发送</string>
    <string name="title_activity_manager">ManagerActivity</string>
    <string name="title_activity_publish_sample">PublishSampleActivity</string>
    <string name="title_activity_twitter">TwitterActivity</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="lbl_preview_failed">Failed to validate the link. Tap to try again.</string>
    <string name="lbl_preview">PREVIEW:</string>
    <string name="lbl_paste_link_tip">Tip: you can also submit links by sharing to Umano from other apps.</string>
    <string name="lbl_paste_link">Paste link here…</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_hint_submit_title">Be an Umano Curator!</string>
    <string name="lbl_hint_submit_text_step1">Submit a link to an interesting article.</string>
    <string name="lbl_hint_submit_text_step2">Our editorial team will review your submission.</string>
    <string name="lbl_hint_submit_text_step3">"We'll notify you if your article gets recorded!"</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title_activity_clubs">ClubsActivity</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search Clubs</string>
    <string name="lbl_join">申请加入</string>
    <string name="title_activity_club_main">ClubMainActivity</string>
    <string name="lbl_members">成员</string>
    <string name="lbl_games">活动</string>
    <string name="lbl_likes">喜欢</string>

</resources>
