<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/umano_light_gray" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/club_detail_image_height"
        android:background="@drawable/login_background" >
        
        <ImageView
            android:id="@id/image"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/club_detail_image_height"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

    </FrameLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/umano_divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="@dimen/standard_margin" >

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_subscribers"
                style="@style/AccountBoxValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textIsSelectable="false" />
            
            <TextView
                style="@style/AccountBoxHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_members"
                android:textIsSelectable="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_shares"
                style="@style/AccountBoxValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textIsSelectable="false" />
            
            <TextView
                style="@style/AccountBoxHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_games"
                android:textIsSelectable="false" />    
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_likes"
                style="@style/AccountBoxValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textIsSelectable="false" />
            
            <TextView
                style="@style/AccountBoxHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_likes"
                android:textIsSelectable="false" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/umano_divider" />

</LinearLayout>