<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/hint_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/action_bar_height"
        android:fillViewport="true"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:orientation="vertical"
            android:padding="@dimen/standard_margin_variable" >

            <RelativeLayout
                android:id="@+id/hint_body"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/umano_light_gray"
                android:padding="@dimen/standard_margin" >

                <TextView
                    android:id="@+id/lbl_hint_title"
                    style="@style/HeaderText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/lbl_hint_submit_title" />

                <TextView
                    android:id="@+id/lbl_step1"
                    style="@style/StepCircle"
                    android:layout_below="@id/lbl_hint_title"
                    android:layout_marginRight="@dimen/standard_margin"
                    android:text="1" />

                <TextView
                    android:id="@+id/lbl_hint_text_step1"
                    style="@style/PageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_hint_title"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:layout_toRightOf="@id/lbl_step1"
                    android:minHeight="30.0dip"
                    android:text="@string/lbl_hint_submit_text_step1" />

                <TextView
                    android:id="@+id/lbl_step2"
                    style="@style/StepCircle"
                    android:layout_below="@id/lbl_hint_text_step1"
                    android:layout_marginRight="@dimen/standard_margin"
                    android:text="2" />

                <TextView
                    android:id="@+id/lbl_hint_text_step2"
                    style="@style/PageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_hint_text_step1"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:layout_toRightOf="@id/lbl_step2"
                    android:minHeight="30.0dip"
                    android:text="@string/lbl_hint_submit_text_step2" />

                <TextView
                    android:id="@+id/lbl_step3"
                    style="@style/StepCircle"
                    android:layout_below="@id/lbl_hint_text_step2"
                    android:layout_marginRight="@dimen/standard_margin"
                    android:text="3" />

                <TextView
                    android:id="@+id/lbl_hint_text_step3"
                    style="@style/PageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_hint_text_step2"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:layout_toRightOf="@id/lbl_step3"
                    android:minHeight="30.0dip"
                    android:text="@string/lbl_hint_submit_text_step3" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_hint_text_step3"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <View
                        android:layout_width="0.0dip"
                        android:layout_height="0.5dip"
                        android:layout_weight="1.0"
                        android:background="@color/umano_divider" />

                    <Button
                        android:id="@+id/start_button"
                        style="@style/LargeButtonOrange"
                        android:layout_marginLeft="@dimen/standard_margin"
                        android:layout_marginRight="@dimen/standard_margin"
                        android:text="@string/lbl_get_started" />

                    <View
                        android:layout_width="0.0dip"
                        android:layout_height="0.5dip"
                        android:layout_weight="1.0"
                        android:background="@color/umano_divider" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:layout_alignBottom="@id/hint_body"
                android:background="@color/umano_divider" />
        </RelativeLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_marginTop="@dimen/action_bar_height"
        android:layout_weight="1.0"
        android:paddingBottom="@dimen/standard_margin"
        android:paddingLeft="@dimen/standard_margin_variable"
        android:paddingRight="@dimen/standard_margin_variable"
        android:paddingTop="@dimen/standard_margin" >

        <EditText
            android:id="@+id/text_submit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/lbl_paste_link"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine|textUri"
            android:nextFocusLeft="@id/text_submit"
            android:nextFocusUp="@id/text_submit"
            android:textColor="@color/umano_edit_text"
            android:textColorHint="@color/umano_edit_hint"
            android:textIsSelectable="false"
            android:textSize="20.0sp" />

        <TextView
            android:id="@+id/text_submit_tip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:paddingBottom="@dimen/standard_margin_double"
            android:text="@string/lbl_paste_link_tip"
            android:textColor="@color/umano_edit_hint"
            android:textSize="14.0sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/lbl_preview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/clip_list_cell_spacing"
        android:text="@string/lbl_preview"
        android:textColor="@color/umano_edit_text"
        android:textIsSelectable="false"
        android:textSize="12.0sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/layout_preview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/clip_list_cell_spacing"
        android:animateLayoutChanges="false"
        android:background="@drawable/white_button_selector"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/clip_standard_image_size"
            android:layout_height="@dimen/clip_standard_image_size"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:background="@drawable/placeholder_small"
            android:contentDescription="@string/app_name"
            android:duplicateParentState="true"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <TextView
            android:id="@+id/lbl_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_toRightOf="@id/image"
            android:ellipsize="end"
            android:maxLines="4"
            android:minHeight="@dimen/clip_standard_image_size"
            android:paddingBottom="20.0dip"
            android:textColor="@color/umano_clip_list_title"
            android:textIsSelectable="false"
            android:textSize="@dimen/clip_standard_title_font_size" />

        <TextView
            android:id="@+id/lbl_source_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/lbl_title"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_toRightOf="@id/image"
            android:ellipsize="end"
            android:maxWidth="@dimen/clip_list_source_max_width"
            android:singleLine="true"
            android:textColor="@color/umano_clip_list_source"
            android:textIsSelectable="false"
            android:textSize="14.0sp" />

        <View
            android:id="@+id/preview_divider"
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:layout_below="@id/lbl_title"
            android:layout_marginTop="@dimen/standard_margin"
            android:background="@color/umano_divider" />

        <Button
            android:id="@+id/lbl_error"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_alignBottom="@id/preview_divider"
            android:layout_alignParentTop="true"
            android:background="@drawable/white_button_selector_transparent"
            android:gravity="center"
            android:text="@string/lbl_preview_failed"
            android:textColor="@color/umano_clip_list_source"
            android:textIsSelectable="false"
            android:textSize="14.0sp"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/loading_preview"
            style="@style/Widget.Sherlock.ProgressBar"
            android:layout_width="50.0dip"
            android:layout_height="50.0dip"
            android:layout_centerInParent="true"
            android:focusable="true" />
    </RelativeLayout>

</LinearLayout>